--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -12,3 +12,9 @@ nav {
   align-items: center;
   gap: 10px;
 }
+
+@media only screen and (max-width: 640px) {
+  nav {
+    padding: 1.875rem 2.5rem;
+  }
+}
