updated home page

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,7 +1,7 @@
 .home {
   background-color: #f9fafc;
   flex: 1;
-  background-image: url('./back.svg');
+  /* background-image: url('./back.svg'); */
   background-size: 100% 100%;
   background-size: cover;
   padding: 6.25rem 6.25rem 0 6.25rem;
